--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -71,7 +71,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">12dp</item>
-        <item name="android:background">@drawable/square_button</item>
+        <item name="android:background">@drawable/square_menu_button</item>
         <item name="android:layout_marginBottom">3dp</item>
         <item name="android:layout_marginLeft">@dimen/between_related_elements_padding</item>
     </style>
