US3748 : Began updating step 2 of registration to reflect 13.2 design comps. Added Henry's strength bars to step 2. Removed old labels that no longer apply to step 2. Updated some string resources to reflect newer wording in comps. Updated margins and spacings in the layout. Removed roboguise from CreateLoginActivity for future compatability with the action bar. Fixed a null pointer exception in CredentialStrengthEditText.

--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -60,8 +60,7 @@
 		            android:layout_below="@+id/error_text_view"
 		            android:text="@string/user_id"
 		            android:textAppearance="?android:attr/textAppearanceMedium"
-		            android:textColor="@color/title" 
-		            android:textStyle="bold"/>
+		             style="@style/body_copy"/>
 	
 		        <EditText
 		            android:id="@+id/username_field"
@@ -86,8 +85,7 @@
 		            android:layout_marginTop="@dimen/between_related_elements_padding"
 		            android:layout_marginRight="14dp"
 		            android:textAppearance="?android:attr/textAppearanceMedium" 
-		            android:textColor="@color/title"
-		            android:textStyle="bold"/>
+		            style="@style/body_copy"/>
 		        
 		        <TextView
 		            android:id="@+id/toggle_password_visibility_label"
