US3748 : Updated some text labels on step 2 of register.

--- a/Phone/main/res/layout/register_create_credentials.xml
+++ b/Phone/main/res/layout/register_create_credentials.xml
@@ -33,8 +33,7 @@
             android:layout_marginTop="@dimen/between_related_elements_padding"
             android:text="@string/account_info_two_id_detail_info_text"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/black"
-            android:textSize="@dimen/light_text_size" />
+            style="@style/sub_copy_small" />
 
         <TextView
             android:id="@+id/account_info_error_label"
@@ -143,8 +142,7 @@
             android:text="@string/account_info_two_pass_info_text"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:textColor="@color/black"
-            android:textSize="@dimen/light_text_size" />
+            style="@style/sub_copy_small" />
 
         <TextView
             android:id="@+id/account_info_two_pass_strength_bar_label"
@@ -222,14 +220,22 @@
             android:imeOptions="actionDone"
             android:inputType="textEmailAddress"
             android:layout_marginTop="@dimen/between_related_elements_padding" />
-
+        
+		<TextView
+            android:id="@+id/account_info_two_email_info_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/account_info_two_email_field"
+            android:text="@string/email_sub_copy"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            style="@style/sub_copy_small"/>
+		
         <TextView
             android:id="@+id/account_info_two_cancel_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/account_info_two_email_label"
-            android:layout_below="@id/account_info_two_email_field"
-            android:layout_marginTop="16dp"
+            android:layout_below="@+id/account_info_two_submit_button"
+            android:layout_centerHorizontal="true"
             android:clickable="true"
             android:onClick="cancel"
             android:padding="8dp"
@@ -241,20 +247,20 @@
             style="@style/call_to_action_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/account_info_step_label"
-            android:layout_below="@+id/account_info_two_email_field"
-            android:layout_marginTop="8dp"
+			android:layout_centerHorizontal="true"
+            android:layout_below="@+id/account_info_two_email_info_label"
+            android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:layout_marginBottom="@dimen/orange_button_margin_top"
             android:onClick="checkInputsThenSubmit"
             android:text="@string/submit_text" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_below="@+id/account_info_two_submit_button" >
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/account_info_two_cancel_label" 
+            android:layout_marginTop="@dimen/orange_button_margin_top">
 
             <include layout="@layout/old_general_need_help_footer" />
-
-            <include layout="@layout/old_general_copyright_footer" />
         </RelativeLayout>
     </RelativeLayout>
 
