Fixing Defects: DE1255, DE1254

--- a/Phone/main/res/layout/push_history_item.xml
+++ b/Phone/main/res/layout/push_history_item.xml
@@ -65,10 +65,11 @@
         android:id="@+id/expanded_text"
         android:layout_width="wrap_content"
    	 	android:layout_height="wrap_content"
-		android:layout_below="@+id/time"
+		android:layout_below="@+id/text"
 		style="@style/field_copy"
    	 	android:layout_toRightOf="@+id/date_view"
    	 	android:layout_toLeftOf="@+id/action_view"
+   	 	android:layout_marginTop="@dimen/forms_inner_padding"
    	 	android:layout_marginRight="@dimen/forms_inner_padding"
    	 	android:layout_marginLeft="@dimen/forms_inner_padding"
 		android:visibility="gone"
