--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -69,7 +69,7 @@
 		            android:layout_below="@+id/user_id_label"
 		            android:background="@drawable/edit_text_default"
 		            android:ems="10"
-		            android:hint="@string/username_placeholder"
+		            android:hint="@string/empty"
 		            android:imeOptions="actionNext"
 		            android:inputType="textNoSuggestions"
 		            android:maxLength="@integer/MAX_ID_LENGTH"
@@ -105,7 +105,7 @@
 		            android:layout_height="48dp"
 		            android:layout_below="@+id/password_label"
 		            android:background="@drawable/edit_text_default"
-		            android:hint="@string/password_placeholder"
+		            android:hint="@string/empty"
 		            android:inputType="textPassword"
 		            android:maxLength="@integer/MAX_PASSWORD_LENGTH"
 		            android:maxLines="@integer/MAX_INPUT_LINES"
