Defect Fix ID: DE1218 When rotating the device the screen  on the User ID Help page does not rotate as expected.  It only stays vertical. DE1219 When rotating the device the screen on the User ID Help page does not rotate as expected. It only stays vertical. DE1222 Rotate the device while in the Password Strength Help Screen.  The page will only display vertically.  It will not dispaly in landscape mode DE1248 Missing X for invalid items
Tested:
Changes were tested against a Droid 4 Device by following steps specified in test case.

--- a/Phone/main/res/layout/register_help_strength.xml
+++ b/Phone/main/res/layout/register_help_strength.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/modal_bottom_margin"
-        android:layout_marginTop="@dimen/modal_bottom_margin"
+        android:layout_marginTop="@dimen/modal_top_margin"
         android:orientation="vertical"
         android:paddingLeft="@dimen/forms_inner_padding"
         android:paddingRight="@dimen/forms_inner_padding" >
@@ -24,7 +24,7 @@
 
         <include
             android:id="@+id/reg_help_strong_pswd"
-            layout="@layout/register_help_strength_item" />
+            layout="@layout/register_help_strength_item"/>
 
         <include
             android:id="@+id/reg_help_footer"
