DE1163 - Typo on the "Are You Sure You Want to Log Out" warning popup.
Fixed disccover to be discover

--- a/Commons/main/res/values/strings_alert_modal.xml
+++ b/Commons/main/res/values/strings_alert_modal.xml
@@ -4,7 +4,7 @@
     <string name="logout_confirm_title">Are You Sure You Want to Log Out?</string>
     <string name="logout_confirm_text">
         Thank you for visiting. 
-        Please tap Stay Logged In to continue using the Disccover App.
+        Please tap Stay Logged In to continue using the Discover App.
         Tap Log Out to finish your session.
     </string>
     <string name="logout_ok_button_text">Log Out</string>
