--- a/Phone/main/res/layout/modal_logout_bottom.xml
+++ b/Phone/main/res/layout/modal_logout_bottom.xml
@@ -12,8 +12,8 @@
         android:id="@+id/modal_alert_divider"
         android:layout_width="fill_parent"
         android:layout_height="5dp"
-        android:background="@drawable/modal_divider_line"
-        android:layout_above="@+id/show_view"/>
+        android:layout_marginTop="@dimen/modal_bottom_margin"
+        android:background="@drawable/modal_divider_line"/>
     
     <LinearLayout
         android:id="@+id/show_view"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/modal_alert_ok"
+        android:layout_below="@+id/modal_alert_divider"
         android:layout_marginTop="@dimen/modal_orange_margin_top">
     
 	    <TextView
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         style="@style/call_to_action_theme"
         android:text="@string/logout_ok_button_text"
-        android:layout_above="@+id/modal_alert_cancel"
+        android:layout_below="@+id/show_view"
         android:layout_marginTop="@dimen/modal_orange_margin_top"
         android:layout_centerHorizontal="true"/>
     
@@ -62,8 +62,8 @@
         android:background="@drawable/transparent_square"
         android:layout_marginTop="@dimen/white_button_margin_top"
         android:paddingBottom="@dimen/modal_orange_margin_top"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/modal_alert_ok"/>
     
 
 </RelativeLayout>
