--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -41,7 +41,8 @@
     <dimen name="modal_left_padding">17dp</dimen>
     <dimen name="modal_bottom_padding">15dp</dimen>
     <dimen name="modal_top_margin">15dp</dimen>
-    <dimen name="modal_bottom_margin">45dp</dimen>
+    <dimen name="modal_bottom_margin">15dp</dimen>
+    <dimen name="modal_top_dummy_view">30dp</dimen>
     
     <!--  Login Bottom Buttons -->
     <dimen name="login_bottom_button_height">50dp</dimen>
