--- a/Phone/main/res/layout/header_progress_indication.xml
+++ b/Phone/main/res/layout/header_progress_indication.xml
@@ -3,111 +3,65 @@
 
     <RelativeLayout
         android:id="@+id/location_text"
-        android:layout_width="fill_parent"
-        android:layout_height="30dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/light_gray_bkgrd" >
+        style="@style/status_indicator_style" >
 
         <ImageView
             android:id="@+id/step1_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/gray_check_mark"
-            android:visibility="invisible" />
+            style="@style/status_check_mark" />
 
         <LinearLayout
             android:id="@+id/step_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/step1_confirm"
-            android:orientation="vertical" >
+            style="@style/status_linear_layouts" >
 
             <ImageView
                 android:id="@+id/first_indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="0dp"
-                android:padding="0dp"
-                android:src="@drawable/orange_down_arrow"
-                android:visibility="invisible" />
+                style="@style/status_indicator_image" />
 
             <TextView
                 android:id="@+id/step1_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:lines="1"
-                android:padding="0dp"
-                android:text="@string/enter_info" />
+                android:text="@string/enter_info" 
+                style="@style/status_indicator_text" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/step_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/status_linear_layouts" 
             android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:layout_gravity="center_horizontal" >
 
             <ImageView
                 android:id="@+id/middle_indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="0dp"
-                android:padding="0dp"
-                android:src="@drawable/orange_down_arrow"
-                android:visibility="invisible" />
+                style="@style/status_indicator_image"  />
 
             <TextView
                 android:id="@+id/step2_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:lines="1"
+                style="@style/status_indicator_text"
                 android:text="@string/create_password" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/step_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/status_linear_layouts" 
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:orientation="vertical"
             android:paddingRight="5dp" >
 
             <ImageView
                 android:id="@+id/last_indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="0dp"
-                android:padding="0dp"
-                android:src="@drawable/orange_down_arrow"
-                android:visibility="invisible" />
+                style="@style/status_indicator_image" />
 
             <TextView
                 android:id="@+id/step3_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:lines="1"
+                style="@style/status_indicator_text"
                 android:text="@string/confirm" />
         </LinearLayout>
 
         <ImageView
             android:id="@+id/step2_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/step_2"
-            android:src="@drawable/gray_check_mark"
-            android:visibility="invisible" />
+            style="@style/status_check_mark" />
     </RelativeLayout>
 
 </merge>
