--- a/Phone/main/res/layout/push_now_available.xml
+++ b/Phone/main/res/layout/push_now_available.xml
@@ -2,12 +2,12 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/light_gray_bkgrd">
     
 	<RelativeLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:background="@drawable/light_gray_bkgrd" 
 	    android:padding="@dimen/forms_inner_padding">
 	    
 	    <TextView
